2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe): Handle GRUB_ERR_OUT_OF_RANGE as
	a bad FS.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/udf.c (read_string): Bail out on size=0.
	(grub_udf_read_symlink): Handle read_string failure.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Improve TRANSLATORS
	comment.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of UDF symlinks.

	* grub-core/fs/udf.c (read_string): New argument outbuf.
	All users updated.
	(grub_ufs_read_symlink): Rename to ...
	(grub_udf_read_symlink): ... this. All users updated.
	Handle symlinks with more than one component.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_read_symlink): Fix handling of long
	symlinks. Replace leading colon with a slash.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_find_file): Handle multiple slashes in
	filename.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (find_in_b_tree) [MODE_AFS]: Fix handling of exact
	match in inner node.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (mount): Improve filesystem detection reliability.
	* grub-core/fs/ext2.c (grub_ext2_mount): Likewise.
	* grub-core/fs/hfs.c (grub_hfs_mount): Likewise.
	* grub-core/fs/hfsplus.c (grub_hfsplus_mount): Likewise.
	* grub-core/fs/jfs.c (grub_jfs_mount): Likewise.
	* grub-core/fs/minix.c (grub_minix_mount): Likewise.
	* grub-core/fs/ntfs.c (grub_ntfs_mount): Likewise.
	* grub-core/fs/romfs.c (grub_romfs_mount): Likewise.
	* grub-core/fs/xfs.c (grub_xfs_mount): Likewise.

2012-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Use grub-probe and not cmp to check that disk is empty.

	* util/grub-install.in: Use grub-probe for zero-check.
	* util/grub-probe.c (PRINT_ZERO_CHECK): New enum value.